# elki_interface

./: .gitignore  README.md  dependencies-deploy.yaml  dependencies-develop.yaml  deploy.md  mkdocs.yml  setup.cfg  setup.py  structure.md
docs/: index.md
note/: dev-nb-debug.ipynb  dev-nb.ipynb  template-nb.ipynb
note/00-data/: starai-get-data.ipynb  starai-queries.ipynb
note/deploy/: conda.ipynb  docs.ipynb  git.ipynb  pypi.ipynb  tests.ipynb
note/tutorial/: hello_world.ipynb  quickstart.ipynb
scripts/: conda-setup.sh
src/elki_interface/: Elki.py  Hics.py  __init__.py  cte.py
tests/: test_skeleton.py  travis_setup.sh
